--- a/aries/package.json
+++ b/aries/package.json
@@ -10,9 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "express-session": "^1.17.3",
+    "nodemon": "^2.0.20",
+    "sessionstorage": "^0.1.0"
   }
 }
